# PicoProjects

./: .gitignore
FirstTests/: CMakeLists.txt  test.c
HelloWorld/: CMakeLists.txt  hw.c
HelloWorld/scripts/: env.sh
connectionwithPC/pico/: CMakeLists.txt  test.c
connectionwithPC/pico/include/: wirelessConnection.h
connectionwithPC/server/: app.py
helperScripts/: loadpi.sh  viewconsole.sh
neopixel/testing/: CMakeLists.txt  neo.cc
neopixel/testing/scripts/: env.sh
temp_humid/: CMakeLists.txt  temp_humid.c
temp_humid/src/: dhtInterface.c
temp_humid_wireless/pico/: test.c
temp_humid_wireless/pico/include/: dhtInterface.h  wirelessConnection.h
temp_humid_wireless/pico/src/: dhtInterface.c  wirelessConnection.c
temp_humid_wireless/server/: app.py  createTable.py  dashBoard.py  dbTests.py  docker-compose.yaml  udpServer.py
temp_humid_wireless/server/dashboard/: app.py  dashBoard.py  dockerfile  requirements.txt  wsgi.py
temp_humid_wireless/server/dashboard/assets/: styles.css
temp_humid_wireless/server/dashboard/database/: addEntry.py  createTable.py
temp_humid_wireless/server/dashboard/pages/: bedroom.py  home.py  login.py
temp_humid_wireless/server/dashboard/templates/: error_page.html
temp_humid_wireless/server/style/: main.css
temp_humid_wireless/server/udp-server/: dockerfile  udpServer.py
wConnection/: test.c
wConnection/include/: wirelessConnection.h
wConnection/src/: wirelessConnection.c
